Fix cross-spoke deposit keying and stabilize fork e2e prover funding

--- a/.env.example
+++ b/.env.example
@@ -58,6 +58,11 @@ PROVER_STORE_KIND=json
 # PROVER_QUEUE_PATH=/abs/path/prover-queue.json
 # PROVER_STATE_PATH=/abs/path/prover-state.json
 
+# Fork E2E gas targets used by scripts/e2e-fork.mjs.
+# E2E_MIN_OPERATOR_GAS_ETH=0.05
+# E2E_MIN_PROVER_GAS_ETH=0.1
+# E2E_PROVER_GAS_BUFFER_ETH=0.01
+
 NEXT_PUBLIC_HUB_RPC_URL=http://127.0.0.1:8545
 NEXT_PUBLIC_SPOKE_RPC_URL=http://127.0.0.1:9545
 NEXT_PUBLIC_HUB_CHAIN_ID=1
