feat: gate across deposits and borrow fills with proof finalization

--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "test": "turbo run test",
     "test:e2e:fork": "node ./scripts/e2e-fork.mjs",
     "test:e2e:base-mainnet-supply": "node ./scripts/e2e-base-mainnet-supply.mjs",
-    "test:e2e:fork:circuit": "node ./scripts/e2e-fork-circuit-one-shot.mjs",
-    "test:e2e:fork:circuit:exec": "node ./scripts/e2e-fork-circuit.mjs",
-    "test:e2e:fork:circuit:prepare": "node ./scripts/e2e-fork-circuit-prepare.mjs",
+    "test:e2e": "pnpm test:e2e:base-mainnet-supply && pnpm test:e2e:fork",
     "format": "turbo run format",
     "contracts:test": "cd contracts && forge test -vvv",
     "contracts:build": "cd contracts && forge build",
